<resources>
    <string name="app_name">Find the Bloons</string>

    <!-- Title Screen -->
    <string name="titleScreenText">Find the Bloons</string>
    <string name="titleScreenButtonSkip">Skip Intro</string>
    <string name="title_monkey">Dart Monkey</string>
    <string name="titleBloon">Regrow Red Bloon</string>
    <string name="titleAuthors"><![CDATA[Granton Lo & Colin Yuen]]></string>

    <!-- Main Menu Strings -->
    <string name="menuGameStartButton">Start Game</string>
    <string name="menuOptionsButton">Options</string>
    <string name="menuHelpButton">Help</string>
    <string name="menuTitleText">Find the Bloons</string>
    <string name="menuImageDesc">Menu Screen Dart Monkey</string>
    <string name="menu_start_icon">Menu Start Icon</string>
    <string name="menu_option_icon">Menu Option Icon</string>
    <string name="menu_help_icon">Menu Help Icon</string>

    <!-- Option Strings -->
    <string name="optionsBoardSizeText">Board Size</string>
    <string name="optionsNumberOfBloonsText">Number of Balloons</string>
    <string name="optionsClearStatsButton">Reset Stats</string>
    <string name="optionsHighScoreText">High Score</string>
    <string name="optionsGamesPlayedText">Games Played</string>

    <!-- Help Strings -->
    <string name="helpInstructions">\tFind the Bloon is a game where you, the player tries to find a certain number of Bloons which are hidden in the cells on the game board. Tapping on a cell allows the player to inspect it. If there was a hidden Bloon, it will be revealed, otherwise a scan, which reveals the number of unrevealed Bloons on the same row and column will be shown on that cell. The goal of the game is to reveal all the Bloons on the game board.</string>
    <string name="helpTitle">Instructions</string>
    <string name="helpRedBloonDesc">Picture of Red Bloon</string>
    <string name="helpCredits">Credits</string>
    <string name="picture_of_bloon">Picture of Bloon</string>

    <!-- Victory Strings -->
    <string name="victoryTitle">Congratulations!</string>
    <string name="victoryText">You helped the Monkeys find all the Bloons!</string>
    <string name="victoryButton">Return to Menu</string>
    <string name="victoryLeftImage">Dart Monkey Facing Right</string>
    <string name="victoryRightImage">Dart Monkey Facing Left</string>
    <string name="victoryScoreCount">Finished in X Scans</string>
    <string name="games_played">Games Played:</string>
    <string name="bloons_found">Bloons Found:</string>
    <string name="scans_used">Scans used:</string>

</resources>