<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#488A05"
    >


    <TextView
        android:id="@+id/menuTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/menuTitleText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:contentDescription="@string/menuImageDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dart_monkey" />

    <Button
        android:id="@+id/menuGameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/menuGameStartButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/menuTitleText"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleText" />

    <ImageView
        android:id="@+id/menuStartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu_start_icon"
        app:layout_constraintBottom_toBottomOf="@+id/menuGameStartButton"
        app:layout_constraintEnd_toStartOf="@+id/menuGameStartButton"
        app:layout_constraintTop_toTopOf="@+id/menuGameStartButton"
        app:srcCompat="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/menuOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menuOptionsButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/menuGameStartButton"
        app:layout_constraintTop_toBottomOf="@+id/menuGameStartButton" />

    <ImageView
        android:id="@+id/menuOptionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu_option_icon"
        app:layout_constraintBottom_toBottomOf="@+id/menuOptionsButton"
        app:layout_constraintEnd_toStartOf="@+id/menuOptionsButton"
        app:layout_constraintTop_toTopOf="@+id/menuOptionsButton"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <Button
        android:id="@+id/menuHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menuHelpButton"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/menuOptionsButton"
        app:layout_constraintTop_toBottomOf="@+id/menuOptionsButton" />

    <ImageView
        android:id="@+id/menuHelpIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu_help_icon"
        app:layout_constraintBottom_toBottomOf="@+id/menuHelpButton"
        app:layout_constraintEnd_toStartOf="@+id/menuHelpButton"
        app:layout_constraintTop_toTopOf="@+id/menuHelpButton"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</androidx.constraintlayout.widget.ConstraintLayout>